feat: added dummy score